--- a/app/src/main/res/layout/activity_group_chats.xml
+++ b/app/src/main/res/layout/activity_group_chats.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.GroupChatsActivity">
+    tools:context=".GroupChatsActivity">
 
     <include
             android:id="@+id/group_chat_bar_layout"
@@ -19,25 +19,27 @@
         android:id="@+id/my_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/group_chat_bar_layout"
         android:layout_above="@+id/myLinearLayout"
-        android:layout_below="@id/group_chat_bar_layout">
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
-
+            android:orientation="vertical"
+            >
             <TextView
                 android:id="@+id/group_chat_text_display"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:textAllCaps="false"
+                android:textSize="20sp"
+                android:textColor="@android:color/background_dark"
                 android:layout_marginStart="2dp"
                 android:layout_marginEnd="2dp"
                 android:layout_marginBottom="60dp"
-                android:padding="10dp"
-                android:textAllCaps="false"
-                android:textColor="@android:color/background_dark"
-                android:textSize="20sp"></TextView>
+                ></TextView>
 
 
         </LinearLayout>
@@ -52,7 +54,7 @@
     >
     <EditText
         android:id="@+id/input_group_message"
-        android:layout_width="390dp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:hint="Wirte your message"
         android:padding="17dp"
