--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/profile_activity"
-    tools:context=".views.ProfileActivity">
+    tools:context=".ProfileActivity">
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/visit_profile_image"
         android:layout_width="200dp"
@@ -40,37 +40,35 @@
         android:textAllCaps="false"
         android:textSize="20sp"
         android:textStyle="bold"/>
-
     <Button
         android:id="@+id/send_message_request_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/visit_profile_status"
-        android:layout_marginLeft="65dp"
         android:layout_marginTop="15dp"
+        android:layout_marginLeft="65dp"
         android:layout_marginRight="65dp"
-        android:background="@drawable/buttons"
-        android:text="Send Message"
-        android:textAllCaps="false"
         android:textColor="@android:color/background_light"
+        android:background="@drawable/buttons"
+        android:textStyle="bold"
         android:textSize="25sp"
-        android:textStyle="bold" />
-
+        android:text="Send Message"
+        android:textAllCaps="false"/>
     <Button
         android:id="@+id/decline_message_request_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/send_message_request_button"
-        android:layout_marginLeft="65dp"
         android:layout_marginTop="15dp"
+        android:layout_marginLeft="65dp"
         android:layout_marginRight="65dp"
-        android:background="@drawable/buttons"
-        android:text="Cancel Chat Request"
-        android:textAllCaps="false"
         android:textColor="@android:color/background_light"
-        android:textSize="25sp"
+        android:background="@drawable/buttons"
         android:textStyle="bold"
-        android:visibility="invisible" />
+        android:textSize="25sp"
+        android:text="Cancel Chat Request"
+        android:visibility="invisible"
+        android:textAllCaps="false"/>
 
 
 
