--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.RegisterActivity">
+    tools:context=".RegisterActivity">
 
     <ImageView
         android:id="@+id/register_image"
@@ -53,37 +53,19 @@
         android:padding="4dp"
 
         />
-    <EditText
-        android:id="@+id/confirm_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/register_password"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="17dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginRight="17dp"
-        android:background="@drawable/inputs"
-        android:drawableStart="@drawable/password"
-        android:drawableLeft="@drawable/password"
-        android:hint="Confirm Password"
-        android:inputType="textPassword"
-        android:padding="4dp"
-
-        />
 
 
     <Button
         android:id="@+id/register_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/confirm_password"
+        android:layout_below="@id/register_password"
         android:layout_marginLeft="19dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="19dp"
         android:background="@color/colorPrimary"
         android:padding="4dp"
-        android:text="Create Your Account"
+        android:text="Đăng ký"
         android:textAllCaps="false"
         android:textColor="@android:color/background_light"
         android:textSize="24sp" />
@@ -96,7 +78,7 @@
         android:layout_below="@id/register_button"
         android:layout_centerInParent="true"
         android:layout_marginRight="15dp"
-        android:text="Already Have An Account?"
+        android:text="Đã có tài khoản?"
         android:textColor="@color/colorPrimary"
         android:textSize="20sp" />
 
