--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".views.LoginActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -72,7 +72,7 @@
                 android:layout_below="@id/login_password"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="15dp"
-                android:text="Quên mật khẩu?"
+                android:text="Forgot password?"
                 android:textColor="@color/colorPrimary" />
 
             <Button
@@ -85,7 +85,7 @@
                 android:layout_marginRight="19dp"
                 android:background="@color/colorPrimary"
                 android:padding="4dp"
-                android:text="Đăng nhập"
+                android:text="Log in"
                 android:textAllCaps="false"
                 android:textColor="@android:color/background_light"
                 android:textSize="24sp" />
@@ -96,9 +96,9 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/login_button"
                 android:layout_centerInParent="true"
-                android:layout_marginRight="15dp"
                 android:layout_marginTop="20dp"
-                android:text="Tạo tài khoản?"
+                android:layout_marginRight="15dp"
+                android:text="Create a new account?"
                 android:textColor="@color/colorPrimary"
                 android:textSize="20sp" />
 
